Allow user to access products to client
